force-app/idp/main/default/objects/IDP_Value_Type__mdt/IDP_Value_Type__mdt.object-meta.xml
<CustomObject>
    <label>IDP Value Type</label>
    <pluralLabel>IDP Value Types</pluralLabel>
    <description>Declares how a document value is parsed, canonicalized, compared and rendered: a built-in Kind (Number, Date, Phone, ValueMap, ...) configured by the typed fields, or a Custom Apex handler implementing IValueType.</description>
</CustomObject>