force-app/idp/main/default/objects/IDP_Value_Type__mdt/fields/Compare_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Compare_Tolerance__c</fullName>
    <label>Compare Tolerance</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>4</scale>
    <description>Compliance: differences within this tolerance are Near rather than Mismatch. Number kind: absolute amount (0.01 = one cent). Date kind: days. Datetime kind: minutes. Blank means exact comparison only.</description>
</CustomField>