force-app/idp/main/default/objects/IDP_Value_Type__mdt/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Text</type>
    <length>3</length>
    <description>Number kind: ISO 4217 code the documents of this type are denominated in, e.g. ZAR. A document stating a different currency fails the parse instead of writing a wrong amount; a document stating none is assumed to be in this currency. Blank accepts whatever the document states.</description>
</CustomField>