force-app/idp/main/default/objects/IDP_Value_Type__mdt/fields/Custom_Options__c.field-meta.xml
<CustomField>
    <fullName>Custom_Options__c</fullName>
    <label>Custom Options</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Kind = Custom only: JSON passed verbatim to the handler class through IdpValueTypes.Config.customOptions.</description>
</CustomField>