force-app/idp/main/default/objects/IDP_Value_Type__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
    <description>What this value type handles, e.g. "South African money amounts as printed on bank statements".</description>
</CustomField>