force-app/idp/main/default/objects/IDP_Value_Type__mdt/fields/Formats__c.field-meta.xml
<CustomField>
    <fullName>Formats__c</fullName>
    <label>Formats</label>
    <type>Text</type>
    <length>255</length>
    <description>Date kind: ordered pipe-separated input patterns tried first to last, e.g. "dd MMMM yyyy|dd MMM yyyy|dd/MM/yyyy|yyyy-MM-dd". Tokens: d/dd, M/MM/MMM/MMMM, yy/yyyy. Regex kind: the pattern (first capturing group is the value).</description>
</CustomField>