force-app/idp/main/default/objects/IDP_Value_Type__mdt/fields/Handler_Class__c.field-meta.xml
<CustomField>
    <fullName>Handler_Class__c</fullName>
    <label>Handler Class</label>
    <type>Text</type>
    <length>255</length>
    <description>Kind = Custom only: Apex class implementing IValueType, resolved with Type.forName.</description>
</CustomField>