force-app/idp/main/default/objects/IDP_Value_Type__mdt/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <label>Kind</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Which built-in behavior parses this type. "Custom" delegates to Handler Class.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Datetime</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>ValueMap</fullName>
                <label>Value Map</label>
            </value>
            <value>
                <fullName>Regex</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>