force-app/idp/main/default/objects/IDP_Value_Type__mdt/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <label>Locale</label>
    <type>Text</type>
    <length>40</length>
    <description>Number kind: locale of the document's number formatting, e.g. en-ZA (comma decimal) or en-US (dot decimal). Makes separator parsing deterministic (Exact); blank falls back to a graded heuristic.</description>
</CustomField>