force-app/idp/main/default/objects/IDP_Value_Type__mdt/fields/Output_Format__c.field-meta.xml
<CustomField>
    <fullName>Output_Format__c</fullName>
    <label>Output Format</label>
    <type>Text</type>
    <length>80</length>
    <description>How the canonical value is rendered into text targets. Date kind: a date pattern (default yyyy-MM-dd). Phone kind: e164 (default), national or digits.</description>
</CustomField>