force-app/idp/main/default/objects/IDP_Value_Type__mdt/fields/Pivot_Year__c.field-meta.xml
<CustomField>
    <fullName>Pivot_Year__c</fullName>
    <label>Pivot Year</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Date kind, two-digit years (yy): the century is chosen so the year lands in [pivot, pivot+99]. Default 1950, so 49 → 2049 and 51 → 1951.</description>
</CustomField>