force-app/idp/main/default/objects/IDP_Value_Type__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Text</type>
    <length>10</length>
    <description>Phone kind: ISO country code giving national numbers their dial code, e.g. ZA turns 082 123 4567 into +27821234567.</description>
</CustomField>