force-app/idp/main/default/objects/IDP_Value_Type__mdt/fields/Scale_Factor__c.field-meta.xml
<CustomField>
    <fullName>Scale_Factor__c</fullName>
    <label>Scale Factor</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Number kind: multiplier applied after parsing, for documents printed "in thousands" (1000) or "in millions" (1000000).</description>
</CustomField>