force-app/idp/main/default/objects/IDP_Value_Type__mdt/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <type>Text</type>
    <length>80</length>
    <description>Datetime kind: IANA timezone (e.g. Africa/Johannesburg) applied when the document's timestamp carries no offset. Blank reads naive timestamps as GMT (graded Inferred).</description>
</CustomField>