force-app/idp/main/default/objects/IDP_Value_Type__mdt/fields/Value_Map_Entries__c.field-meta.xml
<CustomField>
    <fullName>Value_Map_Entries__c</fullName>
    <label>Value Map Entries</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Kind = ValueMap only: the document-text to stored-value dictionary, as JSON: {"entries":[{"fromText":"Pty Ltd","toValue":"Private Company","matchStyle":"Exact"}]}. See IDP_CONFIGURATION.md.</description>
</CustomField>